@@ -2,18 +2,18 @@ package com.crmtech360.crmtech360_backend.security.config;
 
 import com.crmtech360.crmtech360_backend.security.jwt.JwtAuthenticationEntryPoint;
 import com.crmtech360.crmtech360_backend.security.jwt.JwtRequestFilter;
-import com.crmtech360.crmtech360_backend.service.impl.UserDetailsServiceImpl; // Asegúrate que el nombre del bean sea userDetailsService
+import com.crmtech360.crmtech360_backend.service.impl.UserDetailsServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
+// import org.springframework.http.HttpMethod; // No se está usando HttpMethod directamente aquí, se puede quitar si no hay planes inmediatos.
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+// import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder; // Comentado, ya que no se usa la configuración global de esta forma.
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer; // Para CSRF y Headers
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -28,12 +28,12 @@ import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity(prePostEnabled = true, securedEnabled = true, jsr250Enabled = true) // Habilita @PreAuthorize, @Secured, @RolesAllowed
+@EnableMethodSecurity(prePostEnabled = true, securedEnabled = true, jsr250Enabled = true)
 public class SecurityConfig {
 
     private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
     private final JwtRequestFilter jwtRequestFilter;
-    private final UserDetailsServiceImpl userDetailsServiceImpl; // Inyectar para el AuthenticationManagerBuilder
+    private final UserDetailsServiceImpl userDetailsServiceImpl;
 
     @Autowired
     public SecurityConfig(JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint,
@@ -54,45 +54,26 @@ public class SecurityConfig {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
-    // Opcional: Si necesitas configurar AuthenticationManagerBuilder directamente (menos común con config actual)
-    /*
-    @Autowired
-    public void configureGlobal(AuthenticationManagerBuilder auth) throws Exception {
-        auth.userDetailsService(userDetailsServiceImpl).passwordEncoder(passwordEncoder());
-    }
-    */
-
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // Aplicar configuración CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // Deshabilitar CSRF ya que usamos JWT (API stateless)
                 .csrf(AbstractHttpConfigurer::disable)
-                // Configurar el punto de entrada para excepciones de autenticación
                 .exceptionHandling(exceptions -> exceptions.authenticationEntryPoint(jwtAuthenticationEntryPoint))
-                // Configurar la gestión de sesiones como STATELESS (sin sesiones en el servidor)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                // Configurar las reglas de autorización para las solicitudes HTTP
                 .authorizeHttpRequests(auth -> auth
-                        // --- ENDPOINTS PÚBLICOS ---
-                        .requestMatchers("/api/v1/auth/**").permitAll() // Login y Registro
+                        .requestMatchers("/api/v1/auth/**").permitAll()
                         .requestMatchers(
                                 "/swagger-ui.html",
                                 "/swagger-ui/**",
                                 "/v3/api-docs/**",
                                 "/swagger-resources/**",
                                 "/webjars/**",
-                                "/favicon.ico" // A menudo solicitado por navegadores
+                                "/favicon.ico"
                         ).permitAll()
-
-                        // --- ENDPOINTS PROTEGIDOS ---
-                        // La autorización específica se manejará con @PreAuthorize en los controladores.
-                        // Aquí definimos que cualquier otra solicitud debe estar autenticada.
                         .anyRequest().authenticated()
                 );
 
-        // Añadir el filtro JWT antes del filtro estándar de autenticación por usuario/contraseña
         http.addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -101,17 +82,31 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Permite todos los orígenes. En producción, deberías restringirlo a los dominios de tu frontend.
-        // Ejemplo: configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "https://tufrontend.com"));
-        configuration.setAllowedOrigins(List.of("*"));
+        // *** CAMBIO IMPORTANTE AQUÍ ***
+        // Especifica el origen de tu frontend.
+        // Si usas Vite, el puerto por defecto suele ser 5173.
+        // Si usas Create React App, suele ser 3000.
+        // Verifica el puerto correcto en tu consola de desarrollo del frontend.
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173")); // Asegúrate que este sea el puerto de tu frontend
+
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type", "X-Requested-With"));
-        configuration.setExposedHeaders(List.of("Authorization")); // Si necesitas exponer algún header custom
-        configuration.setAllowCredentials(true); // Permitir credenciales si es necesario (cookies, autenticación básica)
-        configuration.setMaxAge(3600L); // Tiempo en segundos que el resultado de una petición pre-flight puede ser cacheado
+        // Es buena práctica ser explícito con los headers que permites.
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Cache-Control",
+                "Content-Type",
+                "Accept",
+                "X-Requested-With",
+                "Origin", // Algunos navegadores lo envían en preflight
+                "Access-Control-Request-Method", // Para preflight
+                "Access-Control-Request-Headers"  // Para preflight
+        ));
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Aplica esta configuración a todas las rutas
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
